// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el archivo <GifGrid/> Debe de mostar items cuando se carga imagenes useFetch 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Batman
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Title"
      url="https://localhost/img.jpg"
    />
    <GifGridItem
      id="123"
      key="123"
      title="Title"
      url="https://localhost/img.jpg"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en el archivo <GifGrid/> Mostrando contenido 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Batman
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
